--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "file upload application with node js, prisma and cloudinary",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --watch src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,10 +14,14 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@quixo3/prisma-session-store": "^3.1.13",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
-    "passport": "^0.7.0"
+    "local": "^0.3.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "prisma": "^6.1.0"
