--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "local": "^0.3.3",
