--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch src/app.js",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "build:css": "npx tailwindcss -i ./src/public/styles/input.css -o ./src/public/styles/output.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "prisma": "^6.1.0"
+    "prisma": "^6.1.0",
+    "tailwindcss": "^3.4.17"
   }
 }
