--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-async-handler": "^1.2.0",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
     "local": "^0.3.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
