--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "flowbite": "^3.0.0",
     "local": "^0.3.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
