--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^7.2.1",
     "flowbite": "^3.0.0",
     "local": "^0.3.3",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
