--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.3.1",
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
@@ -24,13 +24,14 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "flowbite": "^3.0.0",
+    "latest": "^0.2.0",
     "local": "^0.3.3",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "prisma": "^6.1.0",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.17"
   }
 }
